Fix change of width when showing scrollbars

--- a/sps20/assets/scss/style.scss
+++ b/sps20/assets/scss/style.scss
@@ -71,6 +71,10 @@ body {
     justify-content: space-between;
 }
 
+html {
+    width: 100vw;
+}
+
 // adjusted headings
 h1,
 .h1 {
